--- a/itermocil/marketplace-services.yml
+++ b/itermocil/marketplace-services.yml
@@ -5,27 +5,23 @@ windows:
     panes:
       - commands:
         - i2-badge svc-home
-        - vagrant ssh -c 'cd /web/svc-home && git pull && mvn -DskipTests=true install clean install && cd /web/svc-home/server && bin/service.rb run'
+        - vagrant ssh -c 'cd /web/svc-home && git pull && mvn -DskipTests=true clean install && cd /web/svc-home/server && bin/service.rb run'
         name: SVC Home
       - commands:
         - i2-badge svc-image 
-        - vagrant ssh -c 'cd /web/svc-image && git pull && mvn -DskipTests=true install clean install && cd /web/svc-image/server && bin/service.rb run'
+        - vagrant ssh -c 'cd /web/svc-image && git pull && mvn -DskipTests=true clean install && cd /web/svc-image/server && bin/service.rb run'
         name: SVC Image
       - commands:
-        - i2-badge svc-marketplace 
-        - vagrant ssh -c 'cd /web/svc-marketplace && mvn -DskipTests=true install clean install && cd /web/svc-marketplace/server && JVM_DEBUG=1 bin/service.rb run'
-        name: SVC Marketplace
-      - commands:
         - i2-badge svc-user 
-        - vagrant ssh -c 'cd /web/svc-user && git pull && mvn -DskipTests=true install clean install && cd /web/svc-user/server && bin/service.rb run'
+        - vagrant ssh -c 'cd /web/svc-user && git pull && mvn -DskipTests=true clean install && cd /web/svc-user/server && bin/service.rb run'
         name: SVC User
       - commands:
         - i2-badge svc-web-api 
-        - vagrant ssh -c 'cd /web/svc-web-api && git pull && mvn -DskipTests=true install clean install && cd /web/svc-web-api/server && bin/service.rb run'
+        - vagrant ssh -c 'cd /web/svc-web-api && git pull && mvn -DskipTests=true clean install && cd /web/svc-web-api/server && bin/service.rb run'
         name: SVC Web Api
       - commands:
         - i2-badge svc-backoffice 
-        - vagrant ssh -c 'cd /web/svc-backoffice && git pull && mvn -DskipTests=true install clean install && cd /web/svc-backoffice/server && bin/service.rb run'
+        - vagrant ssh -c 'cd /web/svc-backoffice && git pull && mvn -DskipTests=true clean install && cd /web/svc-backoffice/server && bin/service.rb run'
         name: SVC Back Office
       - commands:
         - i2-badge marketplace-out.log
